--- a/playbook/create_cloudru_user.yaml
+++ b/playbook/create_cloudru_user.yaml
@@ -41,7 +41,7 @@
   - name: Disable shh login for root
     lineinfile:
       dest=/etc/ssh/sshd_config
-      regexp='PermitRootLogin'
+      regexp='^#PermitRootLogin'
       insertbefore=BOF
       line='PermitRootLogin no'
 
